# movie-cover-downloader

./: .gitignore  AGENTS.md  LICENSE  README.md  build-bypass.bat  build-direct.bat  build-now.bat  build-quick.bat  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/desktop/: .gitignore  index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.vue  main.ts  package-scripts.test.ts  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  refactoring.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: constants.rs  crypto.rs  lib.rs  main.rs  task_control.rs  types.rs  utils.rs
apps/desktop/src-tauri/src/commands/: fs.rs  image.rs  login.rs  mod.rs  state.rs  task.rs
apps/desktop/src-tauri/src/sidecar/: douban.rs  download.rs  mod.rs  parser.rs  runtime.rs
apps/desktop/src-tauri/src/sqlite/: connection.rs  migration.rs  mod.rs  state.rs
apps/desktop/src/data/: mock.ts
apps/desktop/src/layouts/: AppShell.vue
apps/desktop/src/lib/: douban-empty-category.ts  presenters.test.ts  presenters.ts  queue-runtime.ts  runtime-bridge.ts  task-draft-input.test.ts  task-draft-input.ts  (+3 more)
apps/sidecar/: README.md  package.json  tsconfig.json
apps/sidecar/src/: index.ts
docs/: build-checklist.md  build-guide.md  pnpm-deploy-fix.md  sidecar-symlink-fix.md  usage-guide.md  windows-setup.md
docs/ai-context/: maintenance-guide.md  module-index.md  project-map.md  runtime-flows.md
scripts/: build-with-msvc.bat  build-with-msvc.ps1  check-build-env.ps1  prepare-sidecar-bundle.ps1
(+89 files in other folders)
